--- a/index.html
+++ b/index.html
@@ -27,17 +27,20 @@
     </div>
     
     <main>
-        <section class="tendance">
-            <a href="jeu/dinausor.html"><h2>Dino Jump Game</h2></a>
+        <section class="dino">
+            <a href="jeu dino/dinausor.html"><h2>Dino Jump Game</h2></a>
         </section>
-        <section class="innoubliable">
-            <a href="jeu2.html"><h2>Inoubliables</h2></a>
+        <section class="snake">
+            <a href="Snake game/index.html"><h2>Snake Game</h2></a>
         </section>
-        <section class="pépite">
-            <a href="jeu3.html"><h2>Pépites</h2></a>
+        <section class="flappy">
+            <a href="Flappy bird/index.html"><h2>Flappy Bird</h2></a>
         </section>
-        <section class="nouveautée">
-            <a href="jeu4.html"><h2>Nouveautées</h2></a>
+        <section class="espace">
+            <a href="jeu espace shooter/index.html"><h2>Espace Shooter</h2></a>
+        </section>
+        <section class="2048">
+            <a href="2048-master/2048-master/index.html"><h2>2048</h2></a>
         </section>
     </main>
     
