--- a/jeu dino/dinausor.html
+++ b/jeu dino/dinausor.html
@@ -11,19 +11,10 @@
     <header>
         <div class="logo">Un Reymond Qui Joue</div>
         <div class="menu-container">
-            <div class="search-container">
-                <button class="search-icon" aria-label="Search" onclick="toggleSearch()">
-                    <i class="fas fa-search"></i>
-                </button>
-            </div>
-            <span class="menu-icon">☰</span>
+            <span class="menu-icon"><a href="../index.html">☰</a></span>
         </div>
     </header>
     
-    <div class="overlay" id="overlay" onclick="toggleSearch()"></div>
-    <div class="search-bar" id="searchBar">
-        <input type="text" placeholder="Rechercher..." autofocus>
-    </div>
 
     <div id="game-container">
         <div id="game-background">
