--- a/Crossy Road Game/index.html
+++ b/Crossy Road Game/index.html
@@ -9,6 +9,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/99/three.min.js"></script>
   </head>
   <body>
+    <header>
+      <div class="menu-container">
+          <span class="menu-icon"><a href="../index.html">☰</a></span>
+      </div>
+  </header>
     <div id="counter">0</div>
     <div id="controlls">
       <div>
