--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <section class="2048">
             <a href="2048-master/2048-master/index.html"><h2>2048</h2></a>
         </section>
+        <section class="Crossy">
+            <a href="Crossy Road Game/index.html"><h2>Crossy Road Game</h2></a>
+        </section>
     </main>
     
     <footer>
