--- a/Flappy bird/index.html
+++ b/Flappy bird/index.html
@@ -10,6 +10,11 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <header>
+        <div class="menu-container">
+            <span class="menu-icon"><a href="../index.html">☰</a></span>
+        </div>
+    </header>
     <div class="background"></div>
     <img src="images/Bird.png" alt="bird-img" class="bird" id="bird-1">
     <div class="message">
