--- a/jeu espace shooter/index.html
+++ b/jeu espace shooter/index.html
@@ -8,6 +8,11 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <header>
+        <div class="menu-container">
+            <span class="menu-icon"><a href="../index.html">☰</a></span>
+        </div>
+    </header>
     <canvas></canvas>
 </body>
 </html>
