--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <section class="Crossy">
             <a href="Crossy Road Game/index.html"><h2>Crossy Road Game</h2></a>
         </section>
+        <section class="Tetris">
+            <a href="Tetris/index.html"><h2>Tetris</h2></a>
+        </section>
     </main>
     
     <footer>
