--- a/Tetris/index.html
+++ b/Tetris/index.html
@@ -49,7 +49,10 @@
     background-color: rgba(0, 0, 0, 0.3); /* Assurez-vous que la couleur est semi-transparente */
     z-index: 10;
 }
-
+a{
+    text-decoration: none;
+    color: white;
+}
     </style>
     <title>Tetris</title>
 </head>
