--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section class="espace">
             <a href="jeu espace shooter/index.html"><h2>Espace Shooter</h2></a>
         </section>
-        <section class="2048">
+        <section class="deux">
             <a href="2048-master/2048-master/index.html"><h2>2048</h2></a>
         </section>
         <section class="Crossy">
@@ -47,6 +47,12 @@
         </section>
         <section class="Tetris">
             <a href="Tetris/index.html"><h2>Tetris</h2></a>
+        </section>
+        <section class="tower">
+            <a href="tour/index.html"><h2>Tower Block</h2></a>
+        </section>
+        <section class="car">
+            <a href="Arcade game car/index.html"><h2>Arcade game car</h2></a>
         </section>
     </main>
     
