--- a/Arcade game car/index.html
+++ b/Arcade game car/index.html
@@ -301,7 +301,7 @@ a{
     </div>
 
     <div id="controls">
-      <span><span>C</span>start</span>
+      <span><span>C</span>Insert coin</span>
       <span><span>&lt;</span><span>&gt;</span>rouler</span>
       <span><span>&lt;</span><span>&gt;</span>accélérer</span>
     </div>
