--- a/Tetris/index.html
+++ b/Tetris/index.html
@@ -53,6 +53,10 @@ a{
     text-decoration: none;
     color: white;
 }
+a:hover{
+    text-decoration: none;
+    color: white;
+}
     </style>
     <title>Tetris</title>
 </head>
