--- a/Tetris/index.html
+++ b/Tetris/index.html
@@ -38,7 +38,11 @@
     margin-right: 20px;
     color: #fff;
 }
-
+.menu-icon:hover {
+    transform: scale(1.12); /* Effet de zoom sur hover */
+    text-decoration: none;
+    color: white;
+}
 #overlay {
     display: none; /* Masqué par défaut */
     position: fixed;
@@ -53,10 +57,7 @@ a{
     text-decoration: none;
     color: white;
 }
-a:hover{
-    text-decoration: none;
-    color: white;
-}
+
     </style>
     <title>Tetris</title>
 </head>
