--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <section class="car">
             <a href="Arcade game car/index.html"><h2>Arcade game car</h2></a>
         </section>
+        <section class="Pong-Game">
+            <a href="Pong-Game/index.html"><h2>Ping-pong Game</h2></a>
+        </section>
     </main>
     
     <footer>
