--- a/2048-master/2048-master/index.html
+++ b/2048-master/2048-master/index.html
@@ -45,8 +45,8 @@
     margin-right: 20px;
     color: #000000;
 }
-.menu-icon:hover {
-    transform: scale(1.12); /* Effet de zoom sur hover */
+#menu-icon:hover {
+  transform: scale(1.12); /* Effet de zoom sur hover */
 }
 #overlay {
     display: none; /* Masqué par défaut */
