--- a/Pong-Game/index.html
+++ b/Pong-Game/index.html
@@ -58,7 +58,7 @@ body {
     margin-right: 20px;
     color: #000000;
 }
-.menu-icon:hover {
+#menu-container:hover {
     transform: scale(1.12); /* Effet de zoom sur hover */
 }
 #overlay {
