--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
         <section class="Pong-Game">
             <a href="Pong-Game/index.html"><h2>Ping-pong Game</h2></a>
         </section>
+        <section class="mafia">
+            <a href="Mafia des domininos/index.html"><h2>La Mafia des domininos</h2></a>
+        </section>
+        <section class="Black-jack">
+            <a href="black-jack/index.html"><h2>Black-jack</h2></a>
+        </section>
     </main>
     
     <footer>
