--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
         <section class="Black-jack">
             <a href="black-jack/index.html"><h2>Black-jack</h2></a>
         </section>
+        <section class="solitaire">
+            <a href="solitaire/dist/index.html"><h2>Solitaire</h2></a>
+        </section>
     </main>
     
     <footer>
