--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
         <section class="solitaire">
             <a href="solitaire/dist/index.html"><h2>Solitaire</h2></a>
         </section>
+        <section class="chevalier">
+            <a href="Chevalier de la falaise/index.html"><h2>Chevalier de la falaise</h2></a>
+        </section>
+        <section class="piere">
+            <a href="Pierre papier ciseaux/index.html"><h2>Pierre papier ciseaux</h2></a>
+        </section>
     </main>
     
     <footer>
