--- a/Pierre papier ciseaux/index.html
+++ b/Pierre papier ciseaux/index.html
@@ -10,42 +10,46 @@
 </head>
 
 <body>
+    <header>
+        <div id="menu-container">
+            <span id="menu-icon"><a href="../index.html">☰</a></span>
+        </div>
+    </header> 
     <div class="header">
-        <h1 class="hero">Human Vs The Mighty Computer</h1>
-        <h2 class="second-hero">Try and win against the Computer in a best to 5 rock, paper, scissors game</h2>
+        <h2 class="second-hero">Le premier a 3</h2>
     </div>
     <div class="content"> 
         <button id="Rock">
             <img src="img/rock.svg" alt="rockimage">
-            <p>rock</p>
+            <p>rocher</p>
         </button>
         <button id="Paper"><img src="img/paper.png" alt="rockimage">
-            <p>Paper</p>
+            <p>Papier</p>
         </button>
         <button id="Scissors"><img src="img/scissors.svg" alt="rockimage">
-            <p>Scissors</p>
+            <p>Ciseaux</p>
         </button>
     </div>
     <div class="results">
-        <h3>Results:</h3>
+        <h3>Résultats:</h3>
         <div>
-            <p ><strong>Computer:</strong> <em class="result computer">0</em> </p>
-            <p ><strong>Player:</strong> <em class="result human">0</em> </p>
+            <p ><strong>Ordinateur :</strong> <em class="result computer">0</em> </p>
+            <p ><strong>Joueur :</strong> <em class="result human">0</em> </p>
         </div>
         <div id="round-result-img">
               <div id="computer-choice">
-                <p>Computer's choice:</p>
+                <p>Choix de l’ordinateur :</p>
                 <div></div>
             </div>
              <div id="player-choice">
-                <p>Player's choice:</p>
+                <p>Choix du joueur :</p>
                 <div></div>
             </div>
          
         </div>
         <p id="round-result"></p>
         <p id="final-result"></p>
-        <button class="again hidden">Play Again?</button>
+        <button class="again hidden">Jouer encore?</button>
     </div>
     <script src="script.js"></script>
 </body>
