--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
         <section class="piere">
             <a href="Pierre papier ciseaux/index.html"><h2>Pierre papier ciseaux</h2></a>
         </section>
+        <section class="morpion">
+            <a href="morpion/Styles/index.html"><h2>Morpion</h2></a>
+        </section>
     </main>
     
     <footer>
