--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
         <section class="morpion">
             <a href="morpion/Styles/index.html"><h2>Morpion</h2></a>
         </section>
+        <section class="memory">
+            <a href="memori/index.html"><h2>Memory</h2></a>
+        </section>
     </main>
     
     <footer>
