--- a/Tetris/index.html
+++ b/Tetris/index.html
@@ -17,6 +17,7 @@
     align-items: center;
     padding: 20px;
     background-color: #222738;
+
 }
 
 #logo {
@@ -38,7 +39,7 @@
     margin-right: 20px;
     color: #fff;
 }
-.menu-icon:hover {
+ #menu-icon:hover {
     transform: scale(1.12); /* Effet de zoom sur hover */
     text-decoration: none;
     color: white;
