--- a/index.html
+++ b/index.html
@@ -81,10 +81,13 @@
         <section class="mario">
             <a href="mario/main.html"><h2>Arcade-Mario</h2></a>
         </section>
+        <section class="pacman">
+            <a href="pacman/index.html"><h2>Mini Pacman</h2></a>
+        </section>
     </main>
     
     <footer>
-        Un Reymond Qui Joue
+        Un Reymond Qui Joue; Plateform faite de jeux trouver sur Git-hub et modifier à l'aide de Chat gpt, Hormis le jeu du dino google faite à partir de rien avec l'aide de Chat gpt.
     </footer>
     
     <script src="java.js"></script>
