--- a/memori/index.html
+++ b/memori/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link  rel="shortcut icon" href="img/shortIcon.jpg">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="Css/style.css">
 	<title>Jeu Memory</title>
 </head>
 <body class="bgColor">
